--- a/css/form.css
+++ b/css/form.css
@@ -1,12 +1,51 @@
+#ContactUs{
+    color: white;
+    text-align: center;
+    width: 100%;
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 35px;
+}
 #formContainer{
     height: 100%;
+    width: 50%;
     color: white;
+    margin: auto;
+
 }
 #form{
-     text-align: justified;
-     width: 406px;
+    margin: 0 100px;;
 }
-
+.formProperties{
+    width: 30%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    -webkit-transition: width 1.0s ease-in-out;
+    transition: width 1.0s ease-in-out;
+    border: 4px solid #4CAF50;
+    border-radius: 4px;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 15px;
+}
+textarea{
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    border: 4px solid #4CAF50;
+    border-radius: 4px;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 15px;
+}
+.formProperties:focus{
+    width: 60%;
+}
+textarea:focus{
+    width: 70%;
+}
 #formButton{
     border: none;
     background-color: #4CAF50;
@@ -15,4 +54,7 @@
     padding: 13px 16px;
     text-decoration: underline;
     font-size: 17px;
+}
+#formButton:hover{
+    background-color: green;
 }
