--- a/css/form.css
+++ b/css/form.css
@@ -47,10 +47,10 @@ textarea:focus{
     width: 70%;
 }
 #formButton{
+    margin: 0 100px;;
     border: none;
     background-color: #4CAF50;
     color: white;
-    text-align: center;
     padding: 13px 16px;
     text-decoration: underline;
     font-size: 17px;
